Overloaded methods to add methods - fixes #42
- assertEquals accepts message
- junits for assertEquals
- minor improvements in existing junits